--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,19 @@
 {
     "files.associations": {
         "ratio": "c",
-        "ft_printf.h": "c"
+        "ft_printf.h": "c",
+        "__hash_table": "c",
+        "__split_buffer": "c",
+        "__tree": "c",
+        "array": "c",
+        "bitset": "c",
+        "initializer_list": "c",
+        "iterator": "c",
+        "set": "c",
+        "string": "c",
+        "string_view": "c",
+        "unordered_map": "c",
+        "utility": "c",
+        "vector": "c"
     }
 }
